fix shift page

--- a/src/Containers/Styles/ShiftPage.module.css
+++ b/src/Containers/Styles/ShiftPage.module.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 10px 10px;
+  padding: 10px 10px !important;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -9,7 +9,7 @@
 .transparentButton {
   background-color: transparent;
   border: 0;
-  padding: 0px 10px;
+  padding: 0 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,4 +42,3 @@
   text-decoration-line: underline;
   color: dimgrey;
 }
-
